k8s/radicale-calendar/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radicale
  namespace: radicale
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production

    # mtls
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    # FIXME: part of declarative secret management
    nginx.ingress.kubernetes.io/auth-tls-secret: default/ca-secret
spec:
  ingressClassName: nginx
  rules:
    - host: cal.jessie.cafe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radicale
                port:
                  name: dav
  tls:
    - hosts:
      - cal.jessie.cafe
      secretName: radicale-cert
